# rss_packaging_and_dependency_management

./: .gitignore  README.md  pyproject.toml
ml_forest/: CV.py  ClassifierSwitcher.py  data.py  eda.py  grid_param_config.ini  hyperparam_tuning.py  pipeline.py  predict.py  train.py
tests/: test_data.csv  test_data_to_predict.csv  test_ml_forest.py
