[tool.poetry]
name = "ml-forest"
version = "0.1.0"
description = ""
authors = ["Mikhail Kostin <1bitt2@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
