[tool.poetry]
name = "ml-forest"
version = "0.1.0"
description = "Homework for RS School Machine Learning course"
authors = ["Sekai-no-uragawa <kostinmihail.km@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
click = "^8.1.3"
pandas = "1.3.5"
pandas-profiling = "^3.1.0"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "ml_forest.train:train"
eda = "ml_forest.eda:eda"
tuning = "ml_forest.hyperparam_tuning:tuning"
predict = "ml_forest.predict:predict"